--- a/admin/models/forms/tournament.xml
+++ b/admin/models/forms/tournament.xml
@@ -4,6 +4,27 @@
 		<field name="id" type="text" default="0" label="JGLOBAL_FIELD_ID_LABEL"
 			readonly="true" class="readonly"
 			description="JGLOBAL_FIELD_ID_DESC" />
+		<field
+			name="catid"
+			type="category"
+			extension="com_polartour"
+			class="inputbox"
+			default=""
+			label="COM_POLARTOUR_FIELD_CATID_LABEL"
+			description="COM_POLARTOUR_FIELD_CATID_DESC"
+		>
+			<option value="0">JOPTION_SELECT_CATEGORY</option>
+		</field>
+		
+		<field name="state" type="list"
+			label="JSTATUS" description="JFIELD_PUBLISHED_DESC"
+			class="inputbox small" size="1" default="1" >
+			<option value="1">JPUBLISHED</option>
+			<option value="0">JUNPUBLISHED</option>
+			<option value="2">JARCHIVED</option>
+			<option value="-2">JTRASHED</option>
+		</field>
+
 		<field name="event" type="text" class="inputbox" size="40" 
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_EVENT"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_EVENT_DESC" />
@@ -70,40 +91,70 @@
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK1_DESC">
 			<option value="0">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE</option>
+			<option value="1">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO</option>
+			<option value="2">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT</option>
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ</option>
+			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ</option>
+			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2</option>
 			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2</option>
+			<option value="8">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER</option>
 			<option value="9">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER</option>
 		</field>
 		<field name="tiebreak2" type="list"
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK2_DESC">
 			<option value="0">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE</option>
+			<option value="1">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO</option>
+			<option value="2">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT</option>
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ</option>
+			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ</option>
+			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2</option>
 			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2</option>
+			<option value="8">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER</option>
 			<option value="9">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER</option>
 		</field>
 		<field name="tiebreak3" type="list"
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK3_DESC">
 			<option value="0">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE</option>
+			<option value="1">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO</option>
+			<option value="2">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT</option>
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ</option>
+			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ</option>
+			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2</option>
 			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2</option>
+			<option value="8">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER</option>
 			<option value="9">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER</option>
 		</field>
 		<field name="tiebreak4" type="list"
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK4_DESC">
 			<option value="0">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE</option>
+			<option value="1">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO</option>
+			<option value="2">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT</option>
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ</option>
+			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ</option>
+			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2</option>
 			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2</option>
+			<option value="8">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER</option>
 			<option value="9">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER</option>
 		</field>
 		<field name="tiebreak5" type="list"
 			label="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5"
 			description="COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK5_DESC">
 			<option value="0">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_NONE</option>
+			<option value="1">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELO</option>
+			<option value="2">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_AVERAGEELOCUT</option>
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZ</option>
+			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ</option>
+			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_MEDIANBUCHHOLZ2</option>
 			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT1</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_BUCHHOLZCUT2</option>
+			<option value="8">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_DIRECTENCOUNTER</option>
 			<option value="9">COM_POLARTOUR_TOURNAMENT_FIELD_TIEBREAK_SONNEBORNBERGER</option>
 		</field>
 		<field name="tournamenttype" type="list"
@@ -115,6 +166,8 @@
 			<option value="3">COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_SWISS</option>
 			<option value="4">COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_RR</option>
 			<option value="5">COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_DOUBLERR</option>
+			<option value="6">COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_TRIPLERR</option>
+			<option value="7">COM_POLARTOUR_TOURNAMENT_FIELD_TOURNAMENTTYPE_QUADRORR</option>
 		</field>
 		<field name="startdate" type="calendar" class="inputbox" size="22"
 			format="%Y-%m-%d %H:%M:%S"
